--- a/systemd_socket/copy_trigger.service
+++ b/systemd_socket/copy_trigger.service
@@ -1,8 +1,11 @@
 [Unit]
-Description=Run script when data is received on /tmp/copy_trigger.sock
-Requires=copy_trigger.socket
+Description=copy_trigger_Unix Socket Server
+After=network.target
 
 [Service]
-ExecStart=/usr/local/bin/copy_trigger_server.sh
-StandardInput=socket
-Environment=SYSTEMD_LOG_LEVEL=debug
+ExecStart=/usr/local/bin/copy_trigger_server.py
+Restart=always
+User=root
+
+[Install]
+WantedBy=multi-user.target
